update Fill Form link

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </table> 
     <br>
     <h3>Random Form</h3>
-    <h4><a href= "file:///Users/john.li/Desktop/Web%20Development/HTML_Personal_Site/form.html">Fill Form</a></h4>  
+    <h4><a href= "form.html">Fill Form</a></h4>  
 </body>
 </html>
