--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing = "20">
         <tr>
-            <td><img href="https://static.wikia.nocookie.net/diablo/images/e/e8/Barbarian_light.jpg/revision/latest/scale-to-width-down/250?cb=20080825214537" alt="John Li profile picture"></td>
+            <td><img src="https://static.wikia.nocookie.net/diablo/images/e/e8/Barbarian_light.jpg/revision/latest/scale-to-width-down/250?cb=20080825214537" alt="John Li profile picture"></td>
             <td><h1>John Li</h1>
             <p><em>Student Information Systems Associate</em></p></td>
         </tr>   
