--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </table> 
     <br>
     <h3>Random Form</h3>
-    <h4><a href= "form.html">Fill Form</a></h4>  
+    <h4><a href= "https://johnlisuccess.github.io/cv/form.html">Fill Form</a></h4>  
 </body>
 </html>
