--- a/index.html
+++ b/index.html
@@ -4,44 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John's Personal Site</title>
+    <title>John Li</title>
+    <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
-    <table cellspacing = "20">
-        <tr>
-            <td><img src="https://static.wikia.nocookie.net/diablo/images/e/e8/Barbarian_light.jpg/revision/latest/scale-to-width-down/250?cb=20080825214537" alt="John Li profile picture"></td>
-            <td><h1>John Li</h1>
-            <p><em>Student Information Systems Associate</em></p></td>
-        </tr>   
-    </table>
-    <br>
-    <p>I am an Associate that specializes in the Student Information Systems at Success Academies. I work closely with our vendors to resolve issues with the Student Information system and suggest pathways for further improvement of the product.</p>
-    <hr>
-    <h3>Books and Teaching</h3>
-    <ul>
-        <li>The complete IOS App Development Bootcamp</li>
-        <li><a href = "https://www.google.com/search?q=horus+rising&oq=Horus+rising&aqs=chrome.0.0i355i433i512j46i433i512j0i512l2j46i512j0i512l5.3127j0j4&sourceid=chrome&ie=UTF-8">Horus Rising</a> </li>
-        <ul>
-            <li>test</li>
-        </ul>
-    </ul>
-    <h3>My Hobbies</h3>
-    <ol>
-        <li>lifting</li>
-        <li>video games</li>
-    </ol>
-    <br>
-    <h3>Skills</h3>
-    <table border="1px solid black">
-        <tr>
-            <td>IOS Development ⭐⭐⭐⭐
-            <p>Web Development ⭐⭐⭐⭐</p></td>           
-            <td>Philosophy ⭐⭐
-            <p>Painting ⭐</p></td>
-        </tr>
-    </table> 
-    <br>
-    <h3>Random Form</h3>
-    <h4><a href= "https://johnlisuccess.github.io/cv/form.html">Fill Form</a></h4>  
+    <div class="top">
+        <img class="cloud1" src="images/cloud.png" alt="cloud-image">
+        <h1>I'm Dumpling1992</h1>
+        <h2>A Barbarian</h2>
+        <img class="cloud2" src="images/cloud.png" alt="cloud-image">
+        <img class="mountain" src="images/mountain.png" alt="mountain-image">
+    </div>
+    <div class="middle-container">
+        <div class="profile">
+          <img src="" alt="">
+          <h2>Hello.</h2>
+          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        </div>
+        <hr>
+        <div class="skills">
+          <h2>My Skills.</h2>
+          <div class="skill-row">
+            <img class="" src="" alt="">
+            <h3>Lorem & Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          </div>
+          <div class="skill-row">
+            <img class="" src="" alt="">
+            <h3>Lorem Ipsum Dolor</h3>
+            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
+      </div>
+      
+      <hr>
+      <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© 2018 Name Surname.</p>
+      </div>      
 </body>
 </html>
